syntax = 'proto3';

package exec;

option go_package = "github.com/hyperledger/burrow/execution/exec";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/tendermint/tendermint/abci/types/types.proto";

import "errors.proto";
import "names.proto";
import "txs.proto";
import "permission.proto";
import "spec.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.goproto_registration) = true;
option (gogoproto.messagename_all) = true;

message BlockExecution {
    // The height of this block
    uint64 Height = 1;
    types.Header BlockHeader = 2;
    repeated TxExecution TxExecutions = 3;
}

message TxExecution {
    // Transaction type
    uint32 TxType = 2 [(gogoproto.casttype) = "github.com/hyperledger/burrow/txs/payload.Type"];
    // The hash of the transaction that caused this event to be generated
    bytes TxHash = 3 [(gogoproto.customtype) = "github.com/hyperledger/burrow/binary.HexBytes", (gogoproto.nullable) = false];
    // The block height at which this Tx was included
    uint64 Height = 4;
    // The index of this transaction within the block
    uint64 Index = 5;
    // Signed Tx that triggered this execution
    txs.Envelope Envelope = 6 [(gogoproto.customtype) = "github.com/hyperledger/burrow/txs.Envelope"];
    // Execution events
    repeated Event Events = 7;
    // The execution results
    Result Result = 8;
    // The transaction receipt
    txs.Receipt Receipt = 9;
    // If execution was an exception
    errors.Exception Exception = 10;
    // A proposal may contain other transactions
    repeated TxExecution TxExecutions = 11;
}

message Header {
    option (gogoproto.goproto_stringer) = false;
    // Transaction type
    uint32 TxType = 1 [(gogoproto.casttype) = "github.com/hyperledger/burrow/txs/payload.Type"];
    // The hash of the transaction that caused this event to be generated
    bytes TxHash = 2 [(gogoproto.customtype) = "github.com/hyperledger/burrow/binary.HexBytes", (gogoproto.nullable) = false];
    // The type of event
    uint32 EventType = 3 [(gogoproto.casttype) = "EventType"];
    // EventID published with event
    string EventID = 4;
    // The block height at which this event was emitted
    uint64 Height = 5;
    // The index of this event relative to other events generated by the same transaction
    uint64 Index = 6;
    // If event is exception
    errors.Exception Exception = 7;
}

message Event {
    option (gogoproto.goproto_stringer) = false;
    option (gogoproto.onlyone) = true;
    Header Header = 1;
    InputEvent Input = 2;
    OutputEvent Output = 3;
    CallEvent Call = 4;
    LogEvent Log = 5;
    GovernAccountEvent GovernAccount = 6;
    PayloadEvent Payload = 7;
}

// Could structure this further if needed - sum type of various results relevant to different transaction types
message Result {
    // EVM execution return
    bytes Return = 1;
    // Gas used in computation
    uint64 GasUsed = 2;
    // Name entry created
    names.Entry NameEntry = 3;
    // Permission update performed
    permission.PermArgs PermArgs = 4;
}

message LogEvent {
    bytes Address = 1 [(gogoproto.customtype) = "github.com/hyperledger/burrow/crypto.Address", (gogoproto.nullable) = false];
    bytes Data = 2 [(gogoproto.customtype) = "github.com/hyperledger/burrow/binary.HexBytes", (gogoproto.nullable) = false];
    repeated bytes Topics = 3 [(gogoproto.customtype) = "github.com/hyperledger/burrow/binary.Word256", (gogoproto.nullable) = false];
}

message CallEvent {
    uint32 CallType = 5 [(gogoproto.casttype) = "CallType"];
    CallData CallData = 1;
    bytes Origin = 2 [(gogoproto.customtype) = "github.com/hyperledger/burrow/crypto.Address", (gogoproto.nullable) = false];
    uint64 StackDepth = 3;
    bytes Return = 4 [(gogoproto.customtype) = "github.com/hyperledger/burrow/binary.HexBytes", (gogoproto.nullable) = false];
}

message GovernAccountEvent {
    spec.TemplateAccount AccountUpdate = 1;
}

message InputEvent {
    bytes Address = 1 [(gogoproto.customtype) = "github.com/hyperledger/burrow/crypto.Address", (gogoproto.nullable) = false];
}

message OutputEvent {
    bytes Address = 1 [(gogoproto.customtype) = "github.com/hyperledger/burrow/crypto.Address", (gogoproto.nullable) = false];
}

message PayloadEvent {
    // Transaction type
    uint32 TxType = 1[(gogoproto.casttype) = "github.com/hyperledger/burrow/txs/payload.Type"];
    // Index into BatchTx
    uint32 Index = 2;
}

message CallData {
    bytes Caller = 1 [(gogoproto.customtype) = "github.com/hyperledger/burrow/crypto.Address", (gogoproto.nullable) = false];
    bytes Callee = 2 [(gogoproto.customtype) = "github.com/hyperledger/burrow/crypto.Address", (gogoproto.nullable) = false];
    bytes Data = 3 [(gogoproto.customtype) = "github.com/hyperledger/burrow/binary.HexBytes", (gogoproto.nullable) = false];
    uint64 Value = 4;
    uint64 Gas = 5;
}
